Add the string table and WASM memory usage to the malloced_memory
Change-Id: I21bebc96436f5ff517b1e0aee283acefdcbda94e
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6734567
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Commit-Queue: Michael Lippautz <mlippautz@chromium.org>
Reviewed-by: Michael Lippautz <mlippautz@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101501}

--- a/AUTHORS
+++ b/AUTHORS
@@ -306,6 +306,7 @@ Wael Almattar <waelsy123@gmail.com>
 Wang Chen <wangchen20@iscas.ac.cn>
 WANG Xuerui <git@xen0n.name>
 Wei Wu <lazyparser@gmail.com>
+Weicong Yu <yuweicong666@gmail.com>
 Wenlu Wang <kingwenlu@gmail.com>
 Wenming Yang <yangwenming@bytedance.com>
 Wenyu Zhao <wenyu.zhao@anu.edu.au>
