[debug][wasm] Fix GDB remote server compilation errors
Fix compilation errors and test failures in the GDB remote server stub
when enabled through v8_enable_wasm_gdb_remote_debugging.

The GDB remote server stub has been broken for a long time due to
V8 API changes. This patch addresses multiple issues:

- Fix type conversions from internal Isolate* to v8::Isolate*
- Update Handle to DirectHandle for WasmInstanceObject and WasmTrustedInstanceData
- Fix WasmModuleObject API calls (module() -> native_module()->module())
- Add Zone/AccountingAllocator for more efficient memory management
- Update include headers for changed APIs
- Fix unit tests to work with current V8 codebase

This enables native debuggers like GDB and LLDB to attach to V8 and
debug WebAssembly modules when the GDB remote debugging flag is enabled.

Bug: 433881953
Change-Id: Ib2d728b0e954d8701076a2ff07e59336794ddf82
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6785387
Reviewed-by: Paolo Severini <paolosev@microsoft.com>
Commit-Queue: Paolo Severini <paolosev@microsoft.com>
Reviewed-by: Clemens Backes <clemensb@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101856}

--- a/AUTHORS
+++ b/AUTHORS
@@ -57,6 +57,7 @@ Alexander Botero-Lowry <alexbl@FreeBSD.org>
 Alexander Karpinsky <homm86@gmail.com>
 Alexander Neville <dark@volatile.bz>
 Alexandre Vassalotti <avassalotti@gmail.com>
+Albert Slepak <aslepak@netflix.com>
 Alexey Pavlyutkin <alexey.pavlyutkin@syntacore.com>
 Alexis Campailla <alexis@janeasystems.com>
 Aliya Minimullina <a.minimullina@syntacore.com>
