[sandbox] Ensure only JS linkage builtins are added to dispatch tables
Fixed: 445209324
Change-Id: Ide965ed03736799ec820ad0ba6aa153c8eb7e662
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6955106
Auto-Submit: Krishna Ravishankar <krishna.ravi732@gmail.com>
Reviewed-by: Igor Sheludko <ishell@chromium.org>
Reviewed-by: Michael Lippautz <mlippautz@chromium.org>
Commit-Queue: Michael Lippautz <mlippautz@chromium.org>
Cr-Commit-Position: refs/heads/main@{#102533}

--- a/AUTHORS
+++ b/AUTHORS
@@ -191,6 +191,7 @@ Keith Smiley <keithbsmiley@gmail.com>
 Kevin Gibbons <bakkot@gmail.com>
 Keyhan Vakil <kvakil@googlecontrib.kvakil.me>
 Kris Selden <kris.selden@gmail.com>
+Krishna Ravishankar <krishna.ravi732@gmail.com>
 Kyounga Ra <kyounga@alticast.com>
 Levi Zim <rsworktech@outlook.com>
 LN Liberda <lauren@selfisekai.rocks>
