Fix various typos in comments
This patch fixes several spelling mistakes in comments across the codebase.

R=clemensb@chromium.org

Change-Id: I4a2bfaabfc557d5e18d98ec384ec055c44652708
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6998776
Reviewed-by: Michael Lippautz <mlippautz@chromium.org>
Reviewed-by: Darius Mercadier <dmercadier@chromium.org>
Commit-Queue: Darius Mercadier <dmercadier@chromium.org>
Cr-Commit-Position: refs/heads/main@{#102901}

--- a/AUTHORS
+++ b/AUTHORS
@@ -260,6 +260,7 @@ Refael Ackermann <refack@gmail.com>
 Rene Rebe <rene@exactcode.de>
 Reza Yazdani <ryazdani@futurewei.com>
 Rick Waldron <waldron.rick@gmail.com>
+Riya Amemiya <riyaamemiya@gmail.com>
 Rob Wu <rob@robwu.nl>
 Robert Meijer <robert.s.meijer@gmail.com>
 Robert Mustacchi <rm@fingolfin.org>
