Don't call well-known Symbol methods for RegExp on primitive values
Following the Normative Change approved by TC39, which states that the RegExp's well-known symbols method should not be executed on primitive values.
https://github.com/tc39/ecma262/pull/3009

Fixed: 451217461
Change-Id: Iae42c70ae7067223ff580276f182ab050a365187
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7031243
Reviewed-by: Jakob Linke <jgruber@chromium.org>
Commit-Queue: Patrick Thier <pthier@chromium.org>
Commit-Queue: Jakob Linke <jgruber@chromium.org>
Reviewed-by: Patrick Thier <pthier@chromium.org>
Cr-Commit-Position: refs/heads/main@{#103211}

--- a/AUTHORS
+++ b/AUTHORS
@@ -188,6 +188,7 @@ Kang-Hao (Kenny) Lu <kennyluck@csail.mit.edu>
 Karl Skomski <karl@skomski.com>
 Kasper Lund <kasperl@rivosinc.com>
 Keith Smiley <keithbsmiley@gmail.com>
+Kenta Moriuchi <moriken@kimamass.com>
 Kevin Gibbons <bakkot@gmail.com>
 Kevin Wang <wangpengqiang@bytedance.com>
 Keyhan Vakil <kvakil@googlecontrib.kvakil.me>
